--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
   "name": "cookie_extract",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec electron . start",
+    "build": "@electron-packager . --overwrite cookie_extract --platform=win32 --arch=x64 --out=dist/ --icon=assets/icon.ico --asar --prune=true --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"cookie_extract\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "electron": "^33.2.0"
+  },
+  "dependencies": {
+    "@electron/packager": "^18.3.6",
+    "electron-squirrel-startup": "^1.0.1",
+    "puppeteer-core": "^23.9.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
+  }
 }
